@@ -94,6 +94,13 @@ static ngx_command_t  nchan_commands[] = {
     offsetof(nchan_loc_conf_t, msg_in_etag_only),
     NULL } ,
 
+  { ngx_string("nchan_subscriber_message_id_custom_etag_header"),
+    NGX_HTTP_SRV_CONF|NGX_HTTP_LOC_CONF|NGX_HTTP_LIF_CONF|NGX_CONF_TAKE1,
+    ngx_conf_set_str_slot,
+    NGX_HTTP_LOC_CONF_OFFSET,
+    offsetof(nchan_loc_conf_t, custom_msgtag_header),
+    NULL } ,
+
   { ngx_string("nchan_subscriber_last_message_id"),
     NGX_HTTP_SRV_CONF|NGX_HTTP_LOC_CONF|NGX_HTTP_LIF_CONF|NGX_CONF_TAKE1|NGX_CONF_TAKE2|NGX_CONF_TAKE3|NGX_CONF_TAKE4|NGX_CONF_TAKE5,
     nchan_subscriber_last_message_id,
