@@ -1,3 +1,4 @@
+ feature: nchan_subscriber_message_id_custom_etag_header for misbehaving proxies that eat etags
  fix: compatibility with supported Redis versions < 2.8.14
  fix: nchan_message_timeout 0 should not expire messages
 0.99.6 (Feb. 22 2016)
